cloud-build/cloud-deploy/overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hello-route
spec:
  parentRefs:
    - name: gateway-prod
  hostnames:
    - "hello-prod.kkuchima.com"
  rules:
    - backendRefs:
        - kind: Service
          name: prod-hello-svc
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
